--- a/overrides.css
+++ b/overrides.css
@@ -47,6 +47,12 @@
   h1, h2, h3, h4, h5, h6 {
       margin-bottom: .88rem;
   }
+  .small-12{
+    margin-left: 0px;
+    padding-left: 0px;
+    margin-bottom: 0px;
+    padding-bottom: 0px;
+  }
   p, a, li, small {
       font-weight: 300;
       font-size: 1.1rem;
@@ -509,7 +515,8 @@
   }
   
   h2 {
-      padding: .75rem 0 .75rem 0;
+      /* padding: .75rem 0 .75rem 0; */
+      margin-left: 0;
   }
   p.buffer {
       margin-top:.75rem;
